templates/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: argocd
  labels:
    name: argocd-server
  name: argocd-server
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 4200
  selector:
    app: frontend
